[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Player/pal-spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Objects/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Objects/flash_material.tres" type="Material" id=3]
[ext_resource path="res://Objects/Player/player_hitbox.tres" type="Shape2D" id=4]
[ext_resource path="res://Objects/Player/player_colbox.tres" type="Shape2D" id=5]
[ext_resource path="res://Objects/Player/Items/HeldSprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/Player/PlayerAttacks.gd" type="Script" id=7]
[ext_resource path="res://Scenes/UI/HUD.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Player" type="KinematicBody2D"]
material = ExtResource( 3 )
z_index = 1
collision_mask = 2
script = ExtResource( 2 )
MOVE_SPEED = 120

[node name="Attacks" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Hitbox" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 32

[node name="HitShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -8 )
shape = ExtResource( 4 )

[node name="Ladderbox" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="LadShape" type="CollisionShape2D" parent="Ladderbox"]
position = Vector2( 0, -8 )
shape = ExtResource( 5 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="UI" type="MarginContainer" parent="Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -178.0
margin_top = -118.0
margin_right = 178.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="Camera/UI" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 356.0
margin_bottom = 236.0
rect_scale = Vector2( 1, 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = ExtResource( 5 )

[node name="HandPivot" type="Node2D" parent="."]

[node name="Hand" parent="HandPivot" instance=ExtResource( 6 )]
position = Vector2( 3, -4 )

[node name="MelSpawn" type="Position2D" parent="HandPivot"]
position = Vector2( 9, -8 )

[node name="ProjSpawn" type="Position2D" parent="HandPivot"]
position = Vector2( 19, -8 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
playing = true
offset = Vector2( 0, -12 )

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="SwingTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="InvTimer" type="Timer" parent="."]
one_shot = true

[node name="Particles" type="CPUParticles2D" parent="."]
z_index = -1
emitting = false
lifetime = 0.25
local_coords = false
spread = 180.0
gravity = Vector2( 0, -98 )
initial_velocity = 15.0
scale_amount = 2.0
scale_amount_random = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 1 )

[connection signal="hp_changed" from="." to="Camera/UI/HUD" method="_on_Player_hp_changed"]
[connection signal="items_changed" from="." to="Camera/UI/HUD" method="_on_Player_items_changed"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Ladderbox" to="." method="_on_Ladderbox_area_entered"]
[connection signal="area_exited" from="Ladderbox" to="." method="_on_Ladderbox_area_exited"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
